fix spacing

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -210,7 +210,7 @@ h5 {
   max-width: 83rem;
   margin-inline: auto;
   padding-inline: 1.5rem;
-  margin-top: 50px;
+  margin-top: 20px;
 }
 
 .stack {
